--- a/app/views/ya_direct/index.html.slim
+++ b/app/views/ya_direct/index.html.slim
@@ -1,2 +1,7 @@
-p
-  = authorize_with_yandex_link(response_type: :code)
+div
+  - if user_authorized?
+    p= link_to 'Выход', sign_out_path
+  - else
+    = authorize_with_yandex_link(response_type: :code)
+
+p= session[:yandex_access_token]
