--- a/app/views/ya_direct/index.html.slim
+++ b/app/views/ya_direct/index.html.slim
@@ -1,1 +1,11 @@
-p= session[:yandex_access_token]
+- if @res && @res.any?
+  table.table.table-responsive.table-hover
+    - @res.each do |c|
+      tr.clickable.accordion-toggle data-toggle='collapse' id= c[1]['Id'] data-target=".c-keywords-#{c[1]['Id']}"
+        td
+          span.glyphicon.glyphicon-chevron-right.sub-row-arrow-left aria-hidden="true" 
+          = c[1]['Name']
+
+      tr.campaign-keywords
+        td.hiddenRow colspan="12"
+          = render partial: "keywords_table", locals: {c: c[1]}
