--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,15 @@ body {
   font-size: 12px;
   color: gray;
 }
+
+thead td {
+  font-weight: bold;
+}
+
+td.col-md-8 {
+  width: 40%;
+}
+
+tr.campaign {
+  background-color: #f4f5f7;
+}
