+ need auth info on root page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,9 @@ td.col-md-8 {
 tr.campaign {
   background-color: #f4f5f7;
 }
+
+div.need-auth-info {
+  font-size: 18px;
+  max-width: 500px;
+  margin: 100px auto;
+}
